Fix line number alignment

--- a/src/components/Code/code.module.sass
+++ b/src/components/Code/code.module.sass
@@ -18,9 +18,9 @@
         content: attr(data-line-number)
         position: absolute
         color: var(--code-line-number-color)
-        left: 0
+        left: -5px
         width: 2em
-        text-align: center
+        text-align: right
         user-select: none
 
     &:hover,
